0-ui/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui
spec:
  hosts:
  - frontend.nemo
  - ui
  gateways:
  - nemo-gateway
  http:
  - route:
    - destination:
        host: ui
        subset: v1
